--- a/stable/latest/book/composite_templates.html
+++ b/stable/latest/book/composite_templates.html
@@ -231,17 +231,15 @@ For our template file we also add the <code>compressed</code> and <code>preproce
 &lt;/gresources&gt;
 </code></pre>
 <p>Now we have to compile the resources and link it to our application.
-One way to do this is to execute <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio/fn.compile_resources.html"><code>gio::compile_resources</code></a> within a cargo <a href="https://doc.rust-lang.org/cargo/reference/build-scripts.html">build script</a>.</p>
-<p>First, we have to add <code>gtk4</code> as build dependency in <code>Cargo.toml</code> by executing:</p>
-<pre><code>cargo add gtk4 --rename gtk --build
+One way to do this is to execute <a href="https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib_build_tools/fn.compile_resources.html"><code>glib_build_tools::compile_resources</code></a> within a cargo <a href="https://doc.rust-lang.org/cargo/reference/build-scripts.html">build script</a>.</p>
+<p>First, we have to add <code>glib-build-tools</code> as build dependency in <code>Cargo.toml</code> by executing:</p>
+<pre><code>cargo add glib-build-tools --build
 </code></pre>
 <p>Then, we create a <code>build.rs</code> at the root of our package with the following content.
 This will compile the resources whenever we trigger a build with cargo and then statically link our executable to them.</p>
 <p>Filename: <a class=file-link href="https://github.com/gtk-rs/gtk4-rs/blob/master/book/listings/build.rs">listings/build.rs</a></p>
-<pre><code class="language-rust  no_run noplayground">use gtk::gio;
-
-fn main() {
-    gio::compile_resources(
+<pre><code class="language-rust  no_run noplayground">fn main() {
+    glib_build_tools::compile_resources(
         &quot;composite_templates/1/resources&quot;,
         &quot;composite_templates/1/resources/resources.gresource.xml&quot;,
         &quot;composite_templates_1.gresource&quot;,
@@ -296,7 +294,7 @@ glib::wrapper! {
 impl Window {
     pub fn new(app: &amp;Application) -&gt; Self {
         // Create new window
-        Object::new(&amp;[(&quot;application&quot;, app)]).expect(&quot;Failed to create Window&quot;)
+        Object::new(&amp;[(&quot;application&quot;, app)])
     }
 }
 </code></pre>
@@ -339,9 +337,9 @@ pub struct Window {
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all GObjects
 </span><span class="boring">impl ObjectImpl for Window {
-</span><span class="boring">    fn constructed(&amp;self, obj: &amp;Self::Type) {
+</span><span class="boring">    fn constructed(&amp;self) {
 </span><span class="boring">        // Call &quot;constructed&quot; on parent
-</span><span class="boring">        self.parent_constructed(obj);
+</span><span class="boring">        self.parent_constructed();
 </span><span class="boring">
 </span><span class="boring">        // Connect to &quot;clicked&quot; signal of `button`
 </span><span class="boring">        self.button.connect_clicked(move |button| {
@@ -395,9 +393,9 @@ impl ObjectSubclass for Window {
 <span class="boring">
 </span><span class="boring">// Trait shared by all GObjects
 </span><span class="boring">impl ObjectImpl for Window {
-</span><span class="boring">    fn constructed(&amp;self, obj: &amp;Self::Type) {
+</span><span class="boring">    fn constructed(&amp;self) {
 </span><span class="boring">        // Call &quot;constructed&quot; on parent
-</span><span class="boring">        self.parent_constructed(obj);
+</span><span class="boring">        self.parent_constructed();
 </span><span class="boring">
 </span><span class="boring">        // Connect to &quot;clicked&quot; signal of `button`
 </span><span class="boring">        self.button.connect_clicked(move |button| {
@@ -451,9 +449,9 @@ The button is easily available thanks to the stored reference in <code>self</cod
 </span><span class="boring">
 </span>// Trait shared by all GObjects
 impl ObjectImpl for Window {
-    fn constructed(&amp;self, obj: &amp;Self::Type) {
+    fn constructed(&amp;self) {
         // Call &quot;constructed&quot; on parent
-        self.parent_constructed(obj);
+        self.parent_constructed();
 
         // Connect to &quot;clicked&quot; signal of `button`
         self.button.connect_clicked(move |button| {
@@ -518,7 +516,7 @@ glib::wrapper! {
 <span class="boring">
 </span><span class="boring">impl CustomButton {
 </span><span class="boring">    pub fn new() -&gt; Self {
-</span><span class="boring">        Object::new(&amp;[]).expect(&quot;Failed to create `CustomButton`.&quot;)
+</span><span class="boring">        Object::new(&amp;[])
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
@@ -564,9 +562,9 @@ pub struct Window {
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all GObjects
 </span><span class="boring">impl ObjectImpl for Window {
-</span><span class="boring">    fn constructed(&amp;self, obj: &amp;Self::Type) {
+</span><span class="boring">    fn constructed(&amp;self) {
 </span><span class="boring">        // Call &quot;constructed&quot; on parent
-</span><span class="boring">        self.parent_constructed(obj);
+</span><span class="boring">        self.parent_constructed();
 </span><span class="boring">
 </span><span class="boring">        // Connect to &quot;clicked&quot; signal of `button`
 </span><span class="boring">        self.button.connect_clicked(move |button| {
