--- a/stable/latest/book/g_object_subclassing.html
+++ b/stable/latest/book/g_object_subclassing.html
@@ -192,11 +192,11 @@ glib::wrapper! {
 
 impl CustomButton {
     pub fn new() -&gt; Self {
-        Object::new(&amp;[]).expect(&quot;Failed to create `CustomButton`.&quot;)
+        Object::new(&amp;[])
     }
 
     pub fn with_label(label: &amp;str) -&gt; Self {
-        Object::new(&amp;[(&quot;label&quot;, &amp;label)]).expect(&quot;Failed to create `CustomButton`.&quot;)
+        Object::new(&amp;[(&quot;label&quot;, &amp;label)])
     }
 }
 <span class="boring">
@@ -291,9 +291,9 @@ impl ObjectSubclass for CustomButton {
 
 // Trait shared by all GObjects
 impl ObjectImpl for CustomButton {
-    fn constructed(&amp;self, obj: &amp;Self::Type) {
-        self.parent_constructed(obj);
-        obj.set_label(&amp;self.number.get().to_string());
+    fn constructed(&amp;self) {
+        self.parent_constructed();
+        self.instance().set_label(&amp;self.number.get().to_string());
     }
 }
 
@@ -302,9 +302,9 @@ impl WidgetImpl for CustomButton {}
 
 // Trait shared by all buttons
 impl ButtonImpl for CustomButton {
-    fn clicked(&amp;self, button: &amp;Self::Type) {
+    fn clicked(&amp;self) {
         self.number.set(self.number.get() + 1);
-        button.set_label(&amp;self.number.get().to_string())
+        self.instance().set_label(&amp;self.number.get().to_string())
     }
 }
 </code></pre>
