--- a/stable/latest/book/g_object_signals.html
+++ b/stable/latest/book/g_object_signals.html
@@ -275,15 +275,9 @@ First we override the necessary methods in <code>ObjectImpl</code>.</p>
 impl ObjectImpl for CustomButton {
     fn signals() -&gt; &amp;'static [Signal] {
         static SIGNALS: Lazy&lt;Vec&lt;Signal&gt;&gt; = Lazy::new(|| {
-            vec![Signal::builder(
-                // Signal name
-                &quot;max-number-reached&quot;,
-                // Types of the values which will be sent to the signal handler
-                &amp;[i32::static_type().into()],
-                // Type of the value the signal handler sends back
-                &lt;()&gt;::static_type().into(),
-            )
-            .build()]
+            vec![Signal::builder(&quot;max-number-reached&quot;)
+                .param_types([i32::static_type()])
+                .build()]
         });
         SIGNALS.as_ref()
     }
@@ -294,13 +288,7 @@ impl ObjectImpl for CustomButton {
 </span><span class="boring">        PROPERTIES.as_ref()
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    fn set_property(
-</span><span class="boring">        &amp;self,
-</span><span class="boring">        _obj: &amp;Self::Type,
-</span><span class="boring">        _id: usize,
-</span><span class="boring">        value: &amp;Value,
-</span><span class="boring">        pspec: &amp;ParamSpec,
-</span><span class="boring">    ) {
+</span><span class="boring">    fn set_property(&amp;self, _id: usize, value: &amp;Value, pspec: &amp;ParamSpec) {
 </span><span class="boring">        match pspec.name() {
 </span><span class="boring">            &quot;number&quot; =&gt; {
 </span><span class="boring">                let input_number =
@@ -311,19 +299,21 @@ impl ObjectImpl for CustomButton {
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    fn property(&amp;self, _obj: &amp;Self::Type, _id: usize, pspec: &amp;ParamSpec) -&gt; Value {
+</span><span class="boring">    fn property(&amp;self, _id: usize, pspec: &amp;ParamSpec) -&gt; Value {
 </span><span class="boring">        match pspec.name() {
 </span><span class="boring">            &quot;number&quot; =&gt; self.number.get().to_value(),
 </span><span class="boring">            _ =&gt; unimplemented!(),
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    fn constructed(&amp;self, obj: &amp;Self::Type) {
-</span><span class="boring">        self.parent_constructed(obj);
+</span><span class="boring">    fn constructed(&amp;self) {
+</span><span class="boring">        self.parent_constructed();
 </span><span class="boring">
 </span><span class="boring">        // Bind label to number
 </span><span class="boring">        // `SYNC_CREATE` ensures that the label will be immediately set
-</span><span class="boring">        obj.bind_property(&quot;number&quot;, obj, &quot;label&quot;)
+</span><span class="boring">        let instance = self.instance();
+</span><span class="boring">        instance
+</span><span class="boring">            .bind_property(&quot;number&quot;, &amp;*instance, &quot;label&quot;)
 </span><span class="boring">            .flags(BindingFlags::SYNC_CREATE)
 </span><span class="boring">            .build();
 </span><span class="boring">    }
@@ -336,15 +326,16 @@ impl ObjectImpl for CustomButton {
 </span><span class="boring">
 </span><span class="boring">// Trait shared by all buttons
 </span><span class="boring">impl ButtonImpl for CustomButton {
-</span><span class="boring">    fn clicked(&amp;self, button: &amp;Self::Type) {
+</span><span class="boring">    fn clicked(&amp;self) {
 </span><span class="boring">        let incremented_number = self.number.get() + 1;
+</span><span class="boring">        let instance = self.instance();
 </span><span class="boring">        // If `number` reached `MAX_NUMBER`,
 </span><span class="boring">        // emit &quot;max-number-reached&quot; signal and set `number` back to 0
 </span><span class="boring">        if incremented_number == MAX_NUMBER {
-</span><span class="boring">            button.emit_by_name::&lt;()&gt;(&quot;max-number-reached&quot;, &amp;[&amp;incremented_number]);
-</span><span class="boring">            button.set_property(&quot;number&quot;, &amp;0);
+</span><span class="boring">            instance.emit_by_name::&lt;()&gt;(&quot;max-number-reached&quot;, &amp;[&amp;incremented_number]);
+</span><span class="boring">            instance.set_property(&quot;number&quot;, &amp;0);
 </span><span class="boring">        } else {
-</span><span class="boring">            button.set_property(&quot;number&quot;, &amp;incremented_number);
+</span><span class="boring">            instance.set_property(&quot;number&quot;, &amp;incremented_number);
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">}
@@ -352,8 +343,7 @@ impl ObjectImpl for CustomButton {
 <p>The <code>signals</code> method is responsible for defining a set of signals.
 In our case, we only create a single signal named &quot;max-number-reached&quot;.
 When naming our signal, we make sure to do that in <a href="https://en.wikipedia.org/wiki/Letter_case#Kebab_case">kebab-case</a>.
-When emitted, it sends a single <code>i32</code> value.
-There emitter could get a return value here but we don't need that here so we specify <code>()</code>.</p>
+When emitted, it sends a single <code>i32</code> value.</p>
 <p>We want the signal to be emitted, whenever <code>number</code> reaches <code>MAX_NUMBER</code>.
 Together with the signal we send the value <code>number</code> currently holds.
 After we did that, we set <code>number</code> back to 0.</p>
@@ -385,15 +375,9 @@ After we did that, we set <code>number</code> back to 0.</p>
 </span><span class="boring">impl ObjectImpl for CustomButton {
 </span><span class="boring">    fn signals() -&gt; &amp;'static [Signal] {
 </span><span class="boring">        static SIGNALS: Lazy&lt;Vec&lt;Signal&gt;&gt; = Lazy::new(|| {
-</span><span class="boring">            vec![Signal::builder(
-</span><span class="boring">                // Signal name
-</span><span class="boring">                &quot;max-number-reached&quot;,
-</span><span class="boring">                // Types of the values which will be sent to the signal handler
-</span><span class="boring">                &amp;[i32::static_type().into()],
-</span><span class="boring">                // Type of the value the signal handler sends back
-</span><span class="boring">                &lt;()&gt;::static_type().into(),
-</span><span class="boring">            )
-</span><span class="boring">            .build()]
+</span><span class="boring">            vec![Signal::builder(&quot;max-number-reached&quot;)
+</span><span class="boring">                .param_types([i32::static_type()])
+</span><span class="boring">                .build()]
 </span><span class="boring">        });
 </span><span class="boring">        SIGNALS.as_ref()
 </span><span class="boring">    }
@@ -404,13 +388,7 @@ After we did that, we set <code>number</code> back to 0.</p>
 </span><span class="boring">        PROPERTIES.as_ref()
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    fn set_property(
-</span><span class="boring">        &amp;self,
-</span><span class="boring">        _obj: &amp;Self::Type,
-</span><span class="boring">        _id: usize,
-</span><span class="boring">        value: &amp;Value,
-</span><span class="boring">        pspec: &amp;ParamSpec,
-</span><span class="boring">    ) {
+</span><span class="boring">    fn set_property(&amp;self, _id: usize, value: &amp;Value, pspec: &amp;ParamSpec) {
 </span><span class="boring">        match pspec.name() {
 </span><span class="boring">            &quot;number&quot; =&gt; {
 </span><span class="boring">                let input_number =
@@ -421,19 +399,21 @@ After we did that, we set <code>number</code> back to 0.</p>
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    fn property(&amp;self, _obj: &amp;Self::Type, _id: usize, pspec: &amp;ParamSpec) -&gt; Value {
+</span><span class="boring">    fn property(&amp;self, _id: usize, pspec: &amp;ParamSpec) -&gt; Value {
 </span><span class="boring">        match pspec.name() {
 </span><span class="boring">            &quot;number&quot; =&gt; self.number.get().to_value(),
 </span><span class="boring">            _ =&gt; unimplemented!(),
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">
-</span><span class="boring">    fn constructed(&amp;self, obj: &amp;Self::Type) {
-</span><span class="boring">        self.parent_constructed(obj);
+</span><span class="boring">    fn constructed(&amp;self) {
+</span><span class="boring">        self.parent_constructed();
 </span><span class="boring">
 </span><span class="boring">        // Bind label to number
 </span><span class="boring">        // `SYNC_CREATE` ensures that the label will be immediately set
-</span><span class="boring">        obj.bind_property(&quot;number&quot;, obj, &quot;label&quot;)
+</span><span class="boring">        let instance = self.instance();
+</span><span class="boring">        instance
+</span><span class="boring">            .bind_property(&quot;number&quot;, &amp;*instance, &quot;label&quot;)
 </span><span class="boring">            .flags(BindingFlags::SYNC_CREATE)
 </span><span class="boring">            .build();
 </span><span class="boring">    }
@@ -446,15 +426,16 @@ After we did that, we set <code>number</code> back to 0.</p>
 
 // Trait shared by all buttons
 impl ButtonImpl for CustomButton {
-    fn clicked(&amp;self, button: &amp;Self::Type) {
+    fn clicked(&amp;self) {
         let incremented_number = self.number.get() + 1;
+        let instance = self.instance();
         // If `number` reached `MAX_NUMBER`,
         // emit &quot;max-number-reached&quot; signal and set `number` back to 0
         if incremented_number == MAX_NUMBER {
-            button.emit_by_name::&lt;()&gt;(&quot;max-number-reached&quot;, &amp;[&amp;incremented_number]);
-            button.set_property(&quot;number&quot;, &amp;0);
+            instance.emit_by_name::&lt;()&gt;(&quot;max-number-reached&quot;, &amp;[&amp;incremented_number]);
+            instance.set_property(&quot;number&quot;, &amp;0);
         } else {
-            button.set_property(&quot;number&quot;, &amp;incremented_number);
+            instance.set_property(&quot;number&quot;, &amp;incremented_number);
         }
     }
 }
